[package]
name = "ingress"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-embed = "8.11.0"
mime_guess = "2.0.5"
actix-web = "4.13.0"
tokio = { version="1.49.0", features = ["macros", "rt-multi-thread"] }
actix-cors = "0.7.1"
to_do_server = { path = "../nanoservices/to_do/networking/actix_server", package = "to-do-actix-server" }