[package]
name = "wasm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
serde = { version="1.0.228", features = ["derive"] }
tokio = { version="1.49.0", features = ["full"] }
kernel = { path = "../kernel" }
wasmtime-wasi = { version = "20.0.0", features = ["preview1"]}
wasmtime = "20.0.0"